# menopause_awerness_month

./: README.md  pyproject.toml
data/: meltwater_data_menopause_awareness_month.csv
src/: main.py
src/core/: consts.py  initial_data.py  preprocess_data.py
src/core/stage_1/: __init__.py  key_themes.py  main_topics.py  preprocess_data.py
src/core/stage_2/: treatment_options.py
